--- a/WebApplication1/appsettings.json
+++ b/WebApplication1/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "PageSize": 20,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WebApplication1ContextConnection": "Server=(localdb)\\mssqllocaldb;Database=WebApplication1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
